--- a/Multiple-Regression-IO.rmd
+++ b/Multiple-Regression-IO.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Multiple Regression - IO"
+title: "HW 4 - Tyson Brost, Chase Hatch, Isaac Palmer, Rachel Robertson"
 output: 
   html_document:
     theme: cerulean
@@ -14,42 +14,54 @@ library(tidyverse)
 library(readxl)
 library(plotly)
 library(reshape2)
+library(stargazer)
+library(mosaic)
 IO_airfare <- read_excel("IO airfare.xls")
 colnames(IO_airfare) <- c("year", "origin", "destin", "id", "dist", "passen", "fare", "bkmtshr", "ldist", "y98", "y99", "y00", "lfare","ldistsq", "concen", "lpassen")
-
+IO_airfare$LargeShare <- case_when(IO_airfare$bkmtshr >= 0.75 ~ 1, IO_airfare$bkmtshr < 0.75 ~ 0 )
+IO_airfare$y97 <- case_when(IO_airfare$year == 1997 ~ 1, IO_airfare$year != 1997 ~ 0 )
 ```
 
 ## {.tabset .tabset-pills .tabset-fade}
 
 ### Problem #1 {.tabset .tabset-pills .tabset-fade}
 
-#### Part A/B {.tabset .tabset-pills .tabset-fade}
+#### Regression {.tabset .tabset-pills .tabset-fade}
 
 ##### Hypothesize a linear regression relationship:
-I wanted to build on my previous hypothesis that distance could be used to predict the fare of a route by adding the number of passengers who fly the route per day on average. I feel like more popular flights would be cheaper than those with low flight traffic. Additionally I felt that the best 3rd explanatory variable to include in this analysis was the relationship between distance and passengers. The other options based on the provided dataset just didn't seem to mesh as well with the two that I have included already.
+We wanted to build on the previous hypothesis that distance could be used to predict the fare of a route by adding the number of passengers who fly the route per day on average. We feel like more popular flights would be cheaper than those with low flight traffic. Additionally we felt that the best 3rd explanatory variable to include in this analysis was the relationship between distance and passengers. The other options based on the provided dataset just didn't seem to mesh as well with the two that we have included already. Given the differences in value ranges between all the variables and outputs we choose to use the log of each value.
 
 $$
-\underbrace{Y_i}_\text{fare} \underbrace{=}_{\sim} \overbrace{\beta_0}^{\stackrel{\text{y-int}}{\text{base fare}}} + \overbrace{\beta_1}^{\stackrel{\text{slope}}{\text{baseline}}} \underbrace{X_{1i}}_\text{distance} + \overbrace{\beta_2}^{\stackrel{\text{change in}}{\text{y-int}}}  \underbrace{X_{2i}}_\text{passen} + \overbrace{\beta_3}^{\stackrel{\text{change in}}{\text{slope}}} \underbrace{X_{1i}X_{2i}}_\text{dist:passen} + \epsilon_i
+\underbrace{Y_i}_\text{fare} \underbrace{=}_{\sim} \overbrace{\beta_0}^{\stackrel{\text{y-int}}{\text{base fare}}} + \overbrace{\beta_1}^{\stackrel{\text{slope}}{\text{baseline}}} \underbrace{X_{1i}}_\text{ldistance} + \overbrace{\beta_2}^{\stackrel{\text{change in}}{\text{y-int}}}  \underbrace{X_{2i}}_\text{lpassen} +  \overbrace{\beta_3}^{\stackrel{\text{change in}}{\text{slope}}} \underbrace{X_{1i}X_{2i}}_\text{ldist:lpassen}  + \overbrace{\beta_4}^{\stackrel{\text{change in}}{\text{y-int}}}  \underbrace{X_{4i}}_\text{LargeShare} + \overbrace{\beta_5}^{\stackrel{\text{change in}}{\text{y-int}}}  \underbrace{X_{5i}}_\text{y00} +  \overbrace{\beta_6}^{\stackrel{\text{change in}}{\text{y-int}}}  \underbrace{X_{6i}}_\text{y97} +\epsilon_i
 $$
 
 
-##### Multiple Regression results
+##### Best Multiple Regression results
 
-Below is the Multiple regression result using distance, passengers, and the distance/passenger relationship.
+Below is the Multiple regression result using distance, passengers, and with a few additional variables.
 
 ```{r}
-lm.mult <-lm(fare ~ dist + passen + dist:passen, data=IO_airfare)
+lm.mult <-lm(lfare ~ ldist + lpassen + ldist:lpassen + LargeShare + y00 + y97, data=IO_airfare)
 summary(lm.mult) %>%
-pander(caption= "HW 3 Simple Multiple regression results")
+pander(caption= "HW 4 Multiple regression results w/ extra estimators")
 ```
 
-Below is the Multiple regression result using distance, passengers, but without the distance/passenger relationship.
+Below is the Multiple regression result using distance, passengers, but without the extra variables
 
 ```{r}
-lm.mult2 <-lm(fare ~ dist + passen, data=IO_airfare)
+lm.mult2 <-lm(lfare ~ ldist + lpassen + ldist:lpassen, data=IO_airfare)
 summary(lm.mult2) %>%
-pander(caption= "HW 3 Simple Multiple regression w/o Interaction")
+pander(caption= "HW 4 Simple Multiple regression w/o extra estimators")
 ```
+
+##### Confidence Intervals
+
+```{r}
+confint(lm.mult2, level = 0.95) %>%
+pander(caption= "HW 4 Estimators 95% Conf Int's")
+```
+Assuming that our decision to reject the null Hypothesis is correct then these 95% intervals capture the true coefficient values for each estimator 95% of the time given all possible results of out sample space. The most important result from these values is that non of the ranges include 0, so we can safely assume that each of these values are not equal to 0 at a 95% confidence level.
+
 
 ##### HW 2 Simple Regression Results
 
@@ -63,10 +75,16 @@ pander(caption= "HW 2 simple regression results")
 
 ##### Completed Regression Equation
 
+Here is the Base equation for the regression w/o Extra variables
+
+$$
+\underbrace{Y_i}_\text{fare} \underbrace{=}_{\sim} \overbrace{\beta_0}^{\stackrel{\text{y-int}}{\text{base fare}}} + \overbrace{\beta_1}^{\stackrel{\text{slope}}{\text{baseline}}} \underbrace{X_{1i}}_\text{ldistance} + \overbrace{\beta_2}^{\stackrel{\text{change in}}{\text{y-int}}}  \underbrace{X_{2i}}_\text{lpassen} + \overbrace{\beta_3}^{\stackrel{\text{change in}}{\text{slope}}} \underbrace{X_{1i}X_{2i}}_\text{ldist:lpassen} + \epsilon_i
+$$
+
 Here is the original equation for the regression with the appropriate coefficients now included.
 
 $$
-\underbrace{Y_i}_\text{fare} \underbrace{=}_{\sim} \overbrace{118.7}^{\stackrel{\text{y-int}}{\text{base fare}}} + \overbrace{0.06534}^{\stackrel{\text{slope}}{\text{baseline}}} \underbrace{X_{1i}}_\text{distance} + \overbrace{-0.0212}^{\stackrel{\text{change in}}{\text{y-int}}}  \underbrace{X_{2i}}_\text{passen} + \overbrace{1.537e-05}^{\stackrel{\text{change in}}{\text{slope}}} \underbrace{X_{1i}X_{2i}}_\text{dist:passen} + \epsilon_i
+\underbrace{Y_i}_\text{lfare} \underbrace{=}_{\sim} \overbrace{8.074}^{\stackrel{\text{y-int}}{\text{base lfare}}} + \overbrace{-0.3854}^{\stackrel{\text{slope}}{\text{baseline}}} \underbrace{X_{1i}}_\text{ldistance} + \overbrace{-0.9208}^{\stackrel{\text{change in}}{\text{y-int}}}  \underbrace{X_{2i}}_\text{lpassen} + \overbrace{0.1277}^{\stackrel{\text{change in}}{\text{slope}}} \underbrace{X_{1i}X_{2i}}_\text{ldist:lpassen} + \epsilon_i
 $$
 
 
@@ -79,7 +97,7 @@ knitr::knit_hooks$set(webgl = hook_webgl)
 ```{r eval=FALSE, include=FALSE, test-rgl, webgl=TRUE}
 x <- IO_airfare$dist
 y <- IO_airfare$passen 
-z <- IO_airfare$fare + atan2(x,y)
+z <- IO_airfare$lfare + atan2(x,y)
 p1 <-plot3d(x, y, z, col = rainbow(1000))
 rglwidget()
 ```
@@ -99,7 +117,7 @@ rglwidget()
 ## Hint: library(car) has a scatterplot 3d function which is simple to use
 #  but the code should only be run in your console, not knit.
 
-#library(car)
+library(car)
 #scatter3d(fare ~ dist + passen, data=IO_airfare)
 
 
@@ -113,69 +131,96 @@ rglwidget()
 graph_reso <- 0.5
 
 #Setup Axis
-axis_x <- seq(min(IO_airfare$dist), max(IO_airfare$dist), by = graph_reso)
-axis_y <- seq(min(IO_airfare$passen), max(IO_airfare$passen), by = graph_reso)
+axis_x <- seq(min(IO_airfare$ldist), max(IO_airfare$ldist), by = graph_reso)
+axis_y <- seq(min(IO_airfare$lpassen), max(IO_airfare$lpassen), by = graph_reso)
 
 #Sample points
-lmnew <- expand.grid(dist = axis_x, passen = axis_y, KEEP.OUT.ATTRS=F)
-lmnew$Z <- predict.lm(lm.mult, newdata = lmnew)
-lmnew <- acast(lmnew, passen ~ dist, value.var = "Z") #y ~ x
+lmnew <- expand.grid(ldist = axis_x, lpassen = axis_y, KEEP.OUT.ATTRS=F)
+lmnew$Z <- predict.lm(lm.mult2, newdata = lmnew)
+lmnew <- acast(lmnew, lpassen ~ ldist, value.var = "Z") #y ~ x
 
 #Create scatterplot
 plot_ly(IO_airfare, 
-        x = ~dist, 
-        y = ~passen, 
-        z = ~fare,
+        x = ~ldist, 
+        y = ~lpassen, 
+        z = ~lfare,
         text = rownames(IO_airfare), 
         type = "scatter3d", 
-        mode = "markers", color = ~fare)
+        mode = "markers", color=~lfare) %>%
+  add_trace(z = lmnew,
+            x = axis_x,
+            y = axis_y,
+            type = "surface")
 
   #add_trace(z = lmnew,
    #         x = axis_x,
     #        y = axis_y,
      #       type = "surface")
 ```
-#### Part C {.tabset .tabset-pills .tabset-fade}
+#### Interpretation/Assumptions {.tabset .tabset-pills .tabset-fade}
 
 ##### Interpretation 
 
-Based on the multiple regression, the base cost of a ticket would be \$118.70, for each additional mile the fare would increase by \$0.065 and for each additional passenger the fare would decrease by \$0.021. The strength or the relationship between Distance and passengers is ~0. The P-values for each of these terms are all incredibly close to 0. Although it is worth noting that the probability of the distance variable (B1)is significantly lower than that of the passengers (B2) or relationship (B3), it is much more powerful in estimating fare than passenger count or the relationship.
+Based on the multiple regression, the base cost of a ticket would be \$118.70, for each additional percentage increase in distance the fare would decrease by a percentage of 0.3852 and for each additional percent increase in average passengers the fare would decrease by a percentage of 0.9208. The strength or the relationship between Distance and passengers is ~0. The P-values for each of these terms are all incredibly close to 0.
 
-These relationships are visible best when viewing the 3d plot. It is quickly apparent that distance is a signicant estimator due to the clustering of points along its distance plane. 
+These relationships are visible best when viewing the 3d plot. It is quickly apparent that all estimators have similarly weighted affects on the predicted values, as the points are spread evenly through the central area of the chart.. 
 
 ##### Assumptions
 
-Assuming that our sample is random the following Q-Q plots aid in examaining the residuals of our points. The first primarily helps to show if variance remains constant across our variables. The second shows some minor signs of right skewness, I believe this is mainly due to the fact that my regression fails to predict base costs of a flight leaving these values up to B0. The third and final plot helps determine if the order of the data is important, usually this is needed for time sorted data but I noticed this set is sorted alphabetically by origin point so I included this to see if any patterns presented themselves. 
+Assuming that our sample is random the following Q-Q plots aid in examining the residuals of our points. The first primarily helps to show if variance remains constant across our variables. The second shows some minor signs of right skewness, we agree this is likely due to the fact that the regression fails to predict base costs of a flight leaving these values up to B0. The third and final plot helps determine if the order of the data is important, usually this is needed for time sorted data but we noticed this set is sorted alphabetically by origin point so we included this to see if any patterns presented themselves. 
 
-From these plots my only concerns are that more data closer to the extremes of the dataset would be helpful, additionally some metric that could be used to help account for variance in base costs (such as crew count or time of year) would be great.
+From these plots the primary change from the non-log version is that the extremes now show significantly less variance so the confidence in predictions for extremes may be greater.
 
 ```{r}
 par(mfrow=c(1,3))
-plot(lm.mult,which=1:2)
-plot(lm.mult$residuals)
+plot(lm.mult2,which=1:2)
+plot(lm.mult2$residuals)
 ```
 
 ### Problem 2 
 
-#### Sources of OLS estimator Bias {.tabset .tabset-pills .tabset-fade}
 
-###### Heteroskedasticity: 
 
-This could lead to Bias in OLS estimations. It shows that our model experiences non-constant variance over our independent variables.
+```{R message=FALSE, warning=FALSE}
+X401ksubs <- read_excel("401ksubs.xls")
+X401ksubsF <- X401ksubs %>% filter(fsize== 1)
 
-###### Omitting an important variable: 
+X401ksubsF$fsize <- as.factor(X401ksubsF$fsize)
 
-This could also lead to Bias in OLS estimations. Lingering relationships could cause our model to rely too heavily on provided variables to make an estimate. Omission of relevant variables can also result in hidden patterns within a model.
+```
 
-###### A sample correlation coefficient of 0.395 between two independent variables both included in the model:
+#### How many single-person households are there in the data set?
 
-This could be a potential source of but may requite a bit more information. A correlation of 0.395 between two variables is only weak-moderate at best and likely would not hold major impact on our output. Although a more detailed analysis of this relationship and its potential causes and relative impacts on the model output would be worth the effort. This could be a sign of co-linearity but it may just be correlation without causation.
+There are 2017 single person households in the data set. 
 
-### Problem 3
-How can it be that the R2 is smaller when the variable age is added to the equation?
-![The above equations were estimated using the data in LAWSCH85 from your book.](Chapter-3-1.png)
+#### Using OLS estimate the following regression equation and interpret the results of the estimated equation
 
-There are a few possible explanations for this occurrence, a few of which could be overcrowding of variables, or occurrences such as heteroskedastiscity. Given that current variables being used I believe that the likely cause of this result is the probable relationship between rank and age within the model that has not been accounted for properly with usage of an interaction term. Another possible reason is that the predictive effect of this new variable is less than that of chance alone, this will cause its addition to ironically reduce the r^2 value.
+![ ](Chapter 4.png)
 
+This tells us that for every one dollar increase in income net financial wealth increases by 0.95 dollars. Also that for every year that age increases, net financial wealth increases by 1.03 dollars.
+
+#### Does the intercept term you estimated have any interesting meaning? Explain
+
+The intercept implies that people are 60,000 dollars in debt from the moment they are born (nettfa is measured in 1,000s). This is because at the moment of birth, income is going to be 0, and so is age.
+
+#### Conduct a t-test for each of the estimated parameters and interpret their meaning.
+
+```{r}
+lm.mult3 <-lm(nettfa ~ inc + age, data=X401ksubs)
+summary(lm.mult3)
+
+```
+
+When we conducted a t-test for each of the variables we got high t-values and p-values of less than 0.01 each time so we should be able to reject the null hypotheses that our betas are equal to zero.  
+
+#### Run a simple regression of nettfa using just inc, does it significantly change the estimated coefficient for inc? Explain why this may be.
+
+```{r}
+lm.mult3 <-lm(nettfa ~ inc, data=X401ksubs)
+summary(lm.mult3)
+
+```
+
+Yes, it increases the coefficient for income to 0.999. This may be because there are fewer explanatory variables and there is no longer a value changing the intercept of the regression line. We can no longer group the predictions by age and must find a slope that fits the data best as whole from the same initial base debt.
 
 ##
